--- a/geme'/index.html
+++ b/geme'/index.html
@@ -139,7 +139,8 @@
                     }
                 }
                 else {
-                    colorRect(0,0,canvas.width,canvas.height,'red');
+                    colorRect(0,0,canvas.width,canvas.height,'black');
+                    colorText('fuck you Tony', 50, 50, '30px Arial', 'white');
                 }
             }
             function enemyMove(){
